<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_ros2_lidar</name>
  <version>0.1.0</version>
  <description>ROS2 Driver for Robosense Lidar</description>
  <author>Nick Hortovanyi</author>
  <maintainer email="nick@aussierobots.com.au">nick</maintainer>
  <license>Apache License, Version 2.0</license>

  <url>https://github.com/aussierobots/rs_ros2_lidar</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pcl-dev</buildtool_depend>
  <buildtool_depend>rs_driver</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>